<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/surface"
    android:paddingEnd="2dp"
    android:paddingStart="2dp"
    android:weightSum="7">

    <TextView
        android:id="@+id/text_view_sunday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/sunday"
        android:textColor="@color/red_400"
        android:textSize="@dimen/text_size_12dp" />

    <TextView
        android:id="@+id/text_view_monday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/monday"
        android:textSize="@dimen/text_size_12dp" />

    <TextView
        android:id="@+id/text_view_tuesday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/tuesday"
        android:textSize="@dimen/text_size_12dp" />

    <TextView
        android:id="@+id/text_view_wednesday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/wednesday"
        android:textSize="@dimen/text_size_12dp" />

    <TextView
        android:id="@+id/text_view_thursday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/thursday"
        android:textSize="@dimen/text_size_12dp" />

    <TextView
        android:id="@+id/text_view_friday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/friday"
        android:textSize="@dimen/text_size_12dp" />

    <TextView
        android:id="@+id/text_view_saturday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/saturday"
        android:textColor="@color/blue_400"
        android:textSize="@dimen/text_size_12dp" />

</LinearLayout>